# simple-fsm

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/dry-run/: state-machine.cpp-bak  states.cpp-bak
examples/statemachines/: aaa.cpp  sensor.cpp-bak  tmp.cpp
include/: e.cpp  fsm.hpp  msfsm.hpp  simple-fsm.hpp  simple-fsm.hpp-bak  simple-fsm.hpp-bak2  zcchen-fsm.hpp
src/: CMakeLists.txt  simple-fsm-machine.cpp-bak  simple-fsm-states.cpp-bak  simple-fsm-transition.cpp-bak
tests/: CMakeLists.txt
tests/simpleTest/: CMakeLists.txt  one-plus-one-equals-two.cpp
